# workhuman

./: .gitignore  README.md  env.example  main.py  pyproject.toml
config/: llm_providers.json
data/: treatment copy.csv  treatment_clean.json
notebook/: test.ipynb
output/: employee_10785359_award_chunks.jsonl  employee_10785359_keywords.json  employee_10792543_award_chunks.jsonl  employee_10792543_keywords.json  employee_10968258_award_chunks.jsonl  employee_10968258_keywords.json  employee_10973462_award_chunks.jsonl  employee_10973462_keywords.json  employee_11120885_award_chunks.jsonl  employee_11120885_keywords.json  employee_11168127_award_chunks.jsonl  employee_11168127_keywords.json  employee_11837898_award_chunks.jsonl  employee_11837898_keywords.json  employee_11989802_award_chunks.jsonl  employee_11989802_keywords.json  employee_12733321_award_chunks.jsonl  employee_12733321_keywords.json  employee_13519224_award_chunks.jsonl  employee_13519224_keywords.json  employee_139522_award_chunks.jsonl  employee_139522_keywords.json  employee_15809526_award_chunks.jsonl  employee_15809526_keywords.json  employee_2092856_award_chunks.jsonl  employee_2092856_keywords.json  employee_2800139_award_chunks.jsonl  employee_2800139_keywords.json  employee_3218400_award_chunks.jsonl  employee_3218400_keywords.json  employee_3390854_award_chunks.jsonl  employee_3390854_keywords.json  employee_5248156_award_chunks.jsonl  employee_5248156_keywords.json  employee_5460545_award_chunks.jsonl  employee_5460545_keywords.json  employee_67028_award_chunks.jsonl  (+17 more)
src/: __init__.py  (+4 more)
(+47 files in other folders)
